# h5utils

./: README.md  setup.cfg
examples/: write_jpg_to_h5.py
h5utils/: __init__.py  h5_interfaces.py  project_path.py
