[metadata]
name = h5utils
version = 0.1
author = Ali Siahkoohi
author_email = alisk@rice.edu
description = h5utils: Some basic tools for interfacing with h5py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisiahkoohi/h5utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    matplotlib
    numpy
    tqdm
    h5py
    scikit-image
    gitpython
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    docs*